--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "no-name",
-  "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "lit-element": "^2.2.1",
+      "lit-element": "2.4.0",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10"
     },
@@ -14,27 +12,30 @@
       "raw-loader": "3.1.0",
       "webpack-cli": "3.3.11",
       "webpack": "4.42.0",
+      "ts-loader": "8.0.12",
       "chokidar": "^3.5.0",
       "webpack-merge": "4.2.2",
+      "typescript": "4.0.3",
       "webpack-dev-server": "3.11.0"
     },
-    "hash": "17ded97fa326b803bc1408f4a6888865518eedb43769e6fdfba783ce16fb7592"
+    "hash": ""
   },
   "dependencies": {
+    "lit-element": "2.4.0",
     "@polymer/polymer": "3.2.0",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "datebook": "^6.4.0",
-    "lit-element": "^2.2.1"
+    "@webcomponents/webcomponentsjs": "^2.2.10"
   },
   "devDependencies": {
-    "chokidar": "^3.5.0",
-    "compression-webpack-plugin": "4.0.1",
-    "copy-webpack-plugin": "5.1.2",
-    "raw-loader": "3.1.0",
-    "webpack": "4.42.0",
     "webpack-babel-multi-target-plugin": "2.3.3",
+    "copy-webpack-plugin": "5.1.2",
+    "compression-webpack-plugin": "4.0.1",
+    "raw-loader": "3.1.0",
     "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.11.0",
-    "webpack-merge": "4.2.2"
+    "webpack": "4.42.0",
+    "ts-loader": "8.0.12",
+    "chokidar": "^3.5.0",
+    "webpack-merge": "4.2.2",
+    "typescript": "4.0.3",
+    "webpack-dev-server": "3.11.0"
   }
 }
